added links and images

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <h3 class="title is-2">About Me</h3>
 
       <div class="container">
-        <p>For the past five years I have worked as a web developer with experience researching, designing and building forms and interfaces in the <strong>research and evaluation industry</strong>. I have worked on a range of projects on behalf of federal and provincial clients including Citizenship and Immigration Canada, BC Stats and the GVRD. With my background in <strong>Geographic Information Science</strong> and <strong>data visualization</strong>, I have helped developed a travel survey product that has been successfully deployed in several major metropolitan areas in Canada. Additionally, I have participated in the design and administration of projects in areas as diverse as labour market and health systems evaluations.
+        <p>For the past five years I have worked as a web developer with experience researching, designing and building forms and interfaces in the <strong>research and evaluation industry</strong>. I have worked on a range of projects on behalf of federal and provincial clients including Citizenship and Immigration Canada, BC Stats and the GVRD. With my background in <strong>geographic information science</strong> and <strong>data visualization</strong>, I have helped developed a travel survey product that has been successfully deployed in several major metropolitan areas in Canada. Additionally, I have participated in the design and administration of projects in areas as diverse as labour market and health systems evaluations.
         </p>
       </div>
     </div>
@@ -102,8 +102,8 @@
             </div>
             <br>
             <div class="buttons has-addons is-centered is-dark">
-              <a href="#" class="button is-link has-background-dark">Github</a>
-              <a href="#" class="button is-link has-background-dark">LinkedIn</a>
+              <a href="https://github.com/rcatwr/" class="button is-link has-background-dark">Github</a>
+              <a href="https://www.linkedin.com/in/rminardi/" class="button is-link has-background-dark">LinkedIn</a>
             </div>
           </div>
         </div>
@@ -154,13 +154,15 @@
     <div class="container">
       <div class="section-heading">
         <h3 class="title is-2">Portfolio</h3>
-        <h4 class="subtitle is-5">My latest works</h4>
+        <h4 class="subtitle is-5">Latest Projects:</h4>
       </div>
       <br>
 
       <div class="container portfolio-container">
         <div class="columns">
           <div class="column is-4">
+
+
             <!-- D3 interactive bar graph -->
             <div class="card">
               <header class="card-header">
@@ -216,6 +218,122 @@
               </footer>
             </div>
 
+            <!-- Preschool Website -->
+
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  <span>Preschool Website</span>
+                  <span class="is-pulled-right">
+                    <a href="https://foundation.zurb.com/sites.html">
+                      <span class="tag is-default">Foundation</span>
+                    </a>
+                    <span class="tag is-default">Mobile</span>
+
+                  </span>
+                </p>
+              </header>
+              <div class="card-content">
+                <figure class="image">
+                  <img src="images/river.png" alt="preschool site screenshot">
+                </figure>
+              </div>
+              <footer class="card-footer">
+                <a href="https://www.theriverpreschool.stbarnabaschurch.ca/index.html" class="card-footer-item">Preview</a>
+                <a href="https://github.com/rcatwr/river-ps-site" class="card-footer-item">Source
+                  Code</a>
+              </footer>
+            </div>
+
+            <!-- Currency visualization -->
+
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  <span>World Currency Visualization</span>
+                  <span class="is-pulled-right">
+                    <a href="https://reactjs.org/">
+                      <span class="tag is-default">React</span>
+                    </a>
+                    <a href="https://d3js.org/">
+                      <span class="tag is-default">D3</span>
+                    </a>
+                    <span class="tag is-danger">WIP</span>
+
+                  </span>
+                </p>
+              </header>
+              <div class="card-content">
+                <figure class="image">
+                  <img src="images/currency.png" alt="currency tracker screenshot">
+                </figure>
+              </div>
+              <footer class="card-footer">
+                <a href="https://vibrant-hermann-01672a.netlify.com/" class="card-footer-item">Preview</a>
+                <a href="https://github.com/rcatwr/d3-react-app/tree/master/src" class="card-footer-item">Source
+                  Code</a>
+              </footer>
+            </div>
+
+            <!-- Reservation Form -->
+
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  <span>Registration Form</span>
+                  <span class="is-pulled-right">
+                    <a href="https://reactjs.org/">
+                      <span class="tag is-default">React</span>
+                    </a>
+                    <a href="https://bulma.io/">
+                      <span class="tag is-default">Bulma</span>
+                    </a>
+                    <span class="tag is-default">Mobile</span>
+                    <span class="tag is-danger">WIP</span>
+                  </span>
+                </p>
+              </header>
+              <div class="card-content">
+                <figure class="image">
+                  <img src="images/forms.png" alt="forms screenshot">
+                </figure>
+              </div>
+              <footer class="card-footer">
+                <a href="https://hardcore-hopper-1ee3bc.netlify.com/" class="card-footer-item">Preview</a>
+                <a href="https://github.com/rcatwr/react-form-demo/tree/master/src" class="card-footer-item">Source
+                  Code</a>
+              </footer>
+            </div>
+
+            <!-- Band Website -->
+
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  <span>Oblique Strategies Deck</span>
+                  <span class="is-pulled-right">
+                    <a href="https://reactjs.org/">
+                      <span class="tag is-default">React</span>
+                    </a>
+                    <a href="https://bulma.io/">
+                      <span class="tag is-default">Bulma</span>
+                    </a>
+                    <span class="tag is-default">Mobile</span>
+
+                  </span>
+                </p>
+              </header>
+              <div class="card-content">
+                <figure class="image">
+                  <img src="images/oblique.png" alt="Cards template screenshot">
+                </figure>
+              </div>
+              <footer class="card-footer">
+                <a href="https://unruffled-ride-c2b4b0.netlify.com" class="card-footer-item">Preview</a>
+                <a href="https://github.com/rcatwr/oblique-strategies/blob/master/src/App.js" class="card-footer-item">Source
+                  Code</a>
+              </footer>
+            </div>
 
       </div>
     </div>
