added grid formatting

--- a/index.html
+++ b/index.html
@@ -159,11 +159,12 @@
       <br>
 
       <div class="container portfolio-container">
-        <div class="columns">
-          <div class="column is-4">
+        <div class="columns is-multiline">
+
 
 
             <!-- D3 interactive bar graph -->
+           <div class="column is-one-third">
             <div class="card">
               <header class="card-header">
                 <p class="card-header-title">
@@ -187,9 +188,9 @@
                   Code</a>
               </footer>
             </div>
-
+          </div>
             <!-- Oblique Strategies Deck -->
-
+           <div class="column is-one-third">
             <div class="card">
               <header class="card-header">
                 <p class="card-header-title">
@@ -217,9 +218,9 @@
                   Code</a>
               </footer>
             </div>
-
+           </div>
             <!-- Preschool Website -->
-
+          <div class="column is-one-third">
             <div class="card">
               <header class="card-header">
                 <p class="card-header-title">
@@ -244,9 +245,9 @@
                   Code</a>
               </footer>
             </div>
-
+          </div>
             <!-- Currency visualization -->
-
+           <div class="column is-one-third">
             <div class="card">
               <header class="card-header">
                 <p class="card-header-title">
@@ -274,9 +275,9 @@
                   Code</a>
               </footer>
             </div>
-
+            </div>
             <!-- Reservation Form -->
-
+          <div class="column is-one-third">
             <div class="card">
               <header class="card-header">
                 <p class="card-header-title">
@@ -304,37 +305,35 @@
                   Code</a>
               </footer>
             </div>
-
+           </div>
             <!-- Band Website -->
-
+          <div class="column is-one-third">
             <div class="card">
               <header class="card-header">
                 <p class="card-header-title">
-                  <span>Oblique Strategies Deck</span>
+                  <span>Band Site</span>
                   <span class="is-pulled-right">
-                    <a href="https://reactjs.org/">
-                      <span class="tag is-default">React</span>
-                    </a>
+
                     <a href="https://bulma.io/">
                       <span class="tag is-default">Bulma</span>
                     </a>
                     <span class="tag is-default">Mobile</span>
-
+                    <span class="tag is-danger">WIP</span>
                   </span>
                 </p>
               </header>
               <div class="card-content">
                 <figure class="image">
-                  <img src="images/oblique.png" alt="Cards template screenshot">
+                  <img src="images/band.png" alt="band site screenshot">
                 </figure>
               </div>
               <footer class="card-footer">
-                <a href="https://unruffled-ride-c2b4b0.netlify.com" class="card-footer-item">Preview</a>
-                <a href="https://github.com/rcatwr/oblique-strategies/blob/master/src/App.js" class="card-footer-item">Source
+                <a href="https://determined-aryabhata-f06449.netlify.com/" class="card-footer-item">Preview</a>
+                <a href="https://github.com/rcatwr/band-site/blob/master/index.html" class="card-footer-item">Source
                   Code</a>
               </footer>
             </div>
-
+          </div>
       </div>
     </div>
   </section>
