added link to my blog

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <div class="buttons has-addons is-centered is-dark">
               <a href="https://github.com/rcatwr/" class="button is-link has-background-dark">Github</a>
               <a href="https://www.linkedin.com/in/rminardi/" class="button is-link has-background-dark">LinkedIn</a>
+              <a href="https://rcatwr.com" class="button is-link has-background-dark">My Blog</a>
             </div>
           </div>
         </div>
