--- a/index.html
+++ b/index.html
@@ -284,6 +284,35 @@
                     </div>
                     <!-- column 3-->
                     <div class="tile is-4 is-parent is-vertical">
+
+
+                        <div class="card tile is-child ">
+                            <header class="card-header">
+                                <p class="card-header-title">
+                                    <span style="margin-right: 1em;">Quiz Game</span>
+                                    <span class="is-pulled-right">
+                                        <a href="https://reactjs.org/">
+                                            <span class="tag is-default">React</span>
+                                        </a>
+                                    </span>
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <figure class="image">
+                                    <img src="images/quiz.png" alt="Admin template screenshot">
+                                </figure>
+                            </div>
+                            <footer class="card-footer">
+                                <a href="https://wizardly-wiles-71ddc3.netlify.app" class="card-footer-item">Preview</a>
+                                <a href="https://github.com/rcatwr/science-quiz"
+                                    class="card-footer-item">Source
+                                    Code</a>
+                            </footer>
+                        </div>
+
+
+
+
                         <div class="card tile is-child ">
                             <header class="card-header">
                                 <p class="card-header-title">
