--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="card">
                 <div class="card-image">
                     <figure class="image is-4by6">
-                        <img src="images/head.jpg" alt="portrait of Richard">
+                        <img src="images/r-pic-2a.jpg" alt="portrait of Richard">
                     </figure>
                 </div>
             </div>
